change the way pdf and ppt links are generated

--- a/samples/jekyll-template/_publications/test.bib
+++ b/samples/jekyll-template/_publications/test.bib
@@ -1,3 +1,14 @@
+@book{python,
+  author={M. Lutz},
+  year={2001},
+  title={Programming Python, Second Edition},
+  publisher={O'Reilly Media, Inc.},
+  address={Sebastopol, CA},
+  pages={1026},
+  pdflink1={./hello/python.pdf},
+  isbn={0596000855}
+}
+
 @book{ruby,
   abstract  = {Blah blah blah blah blah blah blah blah ... },
   title     = {The Ruby Programming Language},
