Public entries supported by default

--- a/samples/jekyll-template/_publications/test.bib
+++ b/samples/jekyll-template/_publications/test.bib
@@ -29,6 +29,7 @@
     pages = {674-681},
     title = {commentary on action in perception},
     volume = {76},
+    public    = {yes},
     year = {2008}}
 
 @article{martin:2008kl,
@@ -42,5 +43,6 @@
     pages = {674-681},
     title = {commentary on action in perception},
     volume = {76},
+    public    = {no},
     year = {2008}}
 
