need to produce *and* conditions in selecting publications

--- a/samples/jekyll-template/_publications/test.bib
+++ b/samples/jekyll-template/_publications/test.bib
@@ -1,3 +1,17 @@
+@book{dragon,
+			Address = {Boston},
+			Author = {Aho, Alfred V., and Lam, Monica S., and Ullman, Jeffrey D.},
+			Booktitle = {Compilers: Principles, Techniques, and Tools},
+			Date-Added = {2010-08-05 09:57:15 +0200},
+			Date-Modified = {2010-08-05 10:06:32 +0200},
+			Edition = {second},
+			Keywords = {compiler, lex, yacc},
+			Publisher = {Addison Wesley},
+			Title = {Compilers: Principles, Techniques, and Tools},
+			Year = {2007},
+      public ={yes}
+}
+		
 @book{python,
   author={M. Lutz},
   year={2001},
@@ -43,6 +57,6 @@
     pages = {674-681},
     title = {commentary on action in perception},
     volume = {76},
-    public    = {no},
+    public    = {yes},
     year = {2008}}
 
